--- a/src/components/base/BaseLayout.astro
+++ b/src/components/base/BaseLayout.astro
@@ -25,7 +25,7 @@ const siteDescription =
   "Comité de Participación Ciudadana del Sistema Anticorrupción del Estado de Tlaxcala";
 const siteImage = "@assets/og-image.png";
 const siteAuthor = "CPC Tlaxcala";
-const baseUrl = "https://cpctlaxcala.org";
+const baseUrl = "https://cpc.saetlax.org/";
 ---
 
 <!DOCTYPE html>
