--- a/src/components/base/Header.astro
+++ b/src/components/base/Header.astro
@@ -13,15 +13,15 @@ const menu = [
   },
   {
     name: "Nosotros",
-    url: "/nosotros",
+    url: "/about",
     submenu: [
       {
         name: "Que es el CPC",
-        url: "/nosotros/que-es-cpc",
+        url: "/about",
       },
       {
         name: "Quienes Integran CPC",
-        url: "/nosotros/quienes-integran",
+        url: "/authors",
       },
       {
         name: "Semblanzas",
