--- a/src/pages/red-ciudadana/aviso_privacidad.astro
+++ b/src/pages/red-ciudadana/aviso_privacidad.astro
@@ -71,15 +71,15 @@
 </head>
 <body>
     <div class="container">
-        <a href="/buzon" class="back-button">
+        <a href="/red-ciudadana" class="back-button">
             ← Regresar
         </a>
         
        
-        <iframe title="PDF Document" class="convocatoria-pdf" src="/src/assets/images/utils/CONVOCATORIA_BUZON_ACADEMICO_DE_PROPUESTAS.pdf">
+        <iframe title="PDF Document" class="convocatoria-pdf" src="/src/assets/images/utils/LINEAMIENTOS.pdf">
 
         </iframe>
-        <a href="/buzon" class="back-button">
+        <a href="/red-ciudadana" class="back-button">
             ← Regresar
         </a>
     </div>
