--- a/src/pages/red-ciudadana/convocatoria.astro
+++ b/src/pages/red-ciudadana/convocatoria.astro
@@ -63,16 +63,16 @@
 </head>
 <body>
     <div class="container">
-        <a href="/buzon" class="back-button">
+        <a href="/red-ciudadana" class="back-button">
             ← Regresar
         </a>
         
         <img 
-            src="/src/assets/images/utils/convocatoria.png" 
+            src="/src/assets/images/utils/Convocatoria_RED.png" 
             alt="Convocatoria" 
             class="convocatoria-image"
         />
-        <a href="/buzon" class="back-button">
+        <a href="/red-ciudadana" class="back-button">
             ← Regresar
         </a>
     </div>
