se ajusta pagaina

--- a/src/components/base/Header.astro
+++ b/src/components/base/Header.astro
@@ -21,7 +21,7 @@ const menu = [
       },
       {
         name: "Quienes Integran CPC",
-        url: "/authors",
+        url: "/integrantes",
       },
       {
         name: "Semblanzas",
