se cambian las varables

--- a/src/components/base/Header.astro
+++ b/src/components/base/Header.astro
@@ -13,11 +13,11 @@ const menu = [
   },
   {
     name: "Nosotros",
-    url: "/about",
+    url: "/nosotros",
     submenu: [
       {
         name: "Que es el CPC",
-        url: "/about",
+        url: "/nosotros",
       },
       {
         name: "Quienes Integran CPC",
