--- a/src/components/integrantes/Card.astro
+++ b/src/components/integrantes/Card.astro
@@ -1,11 +1,11 @@
 ---
-import type { AuthorsEntry } from "@/types";
+import type { IntegrantesEntry } from "@/types";
 import { plainify } from "@lib/textConverter";
 import { Image } from "astro:assets";
 import Social from "@components/common/Social.astro";
 
 interface Props {
-  entry: AuthorsEntry;
+  entry: IntegrantesEntry;
 }
 
 const { entry }: Props = Astro.props;
