--- a/src/components/integrantes/EntryLayout.astro
+++ b/src/components/integrantes/EntryLayout.astro
@@ -4,10 +4,10 @@ import Social from "@components/common/Social.astro";
 import BaseLayout from "@components/base/BaseLayout.astro";
 import { Image } from "astro:assets";
 import { render } from "astro:content";
-import type { AuthorsEntry, BlogEntry } from "@/types";
+import type { IntegrantesEntry, BlogEntry } from "@/types";
 
 interface Props {
-  entry: AuthorsEntry;
+  entry: IntegrantesEntry;
   recentBlogEntries: BlogEntry[];
 }
 
