--- a/src/components/nosotros/EntryLayout.astro
+++ b/src/components/nosotros/EntryLayout.astro
@@ -2,11 +2,11 @@
 import BaseLayout from "@components/base/BaseLayout.astro";
 import { markdownify } from "@lib/textConverter";
 import { Image } from "astro:assets";
-import type { AboutEntry } from "@/types";
+import type { NosotrosEntry } from "@/types";
 import { render } from "astro:content";
 
 interface Props {
-  entry: AboutEntry;
+  entry: NosotrosEntry;
 }
 
 const { entry } = Astro.props;
