--- a/src/pages/integrantes/index.astro
+++ b/src/pages/integrantes/index.astro
@@ -1,12 +1,12 @@
 ---
-import type { AuthorsEntry } from "@/types";
-import CollectionLayout from "@components/authors/CollectionLayout.astro";
+import type { IntegrantesEntry } from "@/types";
+import CollectionLayout from "@components/integrantes/CollectionLayout.astro";
 import { getEntries } from "@lib/contentParser";
 import { getIndex } from "@lib/contentParser";
 import { sortByTitle } from "@lib/sortFunctions";
 
-const authorIndex = await getIndex("authors") as AuthorsEntry;
-const entries = await getEntries("authors", sortByTitle) as AuthorsEntry[];
+const authorIndex = await getIndex("integrantes") as IntegrantesEntry;
+const entries = await getEntries("integrantes", sortByTitle) as IntegrantesEntry[];
 ---
 
-<CollectionLayout authorIndex={authorIndex} entries={entries} />
+<CollectionLayout integranteIndex={authorIndex} entries={entries} />
