--- a/src/pages/search.astro
+++ b/src/pages/search.astro
@@ -5,14 +5,9 @@ import { getEntriesBatch } from "@lib/contentParser";
 import type { CollectionKey } from "astro:content";
 
 const searchableCollections = [
-  "about",
-  "authors",
-  "blog",
-  "docs",
-  "poetry",
-  "portfolio",
-  "recipes",
-  "terms",
+  "nosotros",
+  "integrantes",
+ 
 ] as CollectionKey[];
 
 const searchList = (await getEntriesBatch(
