revision del menu

--- a/src/pages/search.astro
+++ b/src/pages/search.astro
@@ -7,7 +7,7 @@ import type { CollectionKey } from "astro:content";
 const searchableCollections = [
   "nosotros",
   "integrantes",
- 
+  "informacion",
 ] as CollectionKey[];
 
 const searchList = (await getEntriesBatch(
