se agrega componente generico

--- a/src/components/base/Header.astro
+++ b/src/components/base/Header.astro
@@ -23,30 +23,27 @@ const menu = [
         name: "Quienes Integran CPC",
         url: "/integrantes",
       },
-      {
-        name: "Semblanzas",
-        url: "/nosotros/semblanzas",
-      },
+      
       {
         name: "Que Hace el CPC",
-        url: "/nosotros/que-hace",
+        url: "/informacion/que-hace",
       },
       {
         name: "Que NO Hace el CPC",
-        url: "/nosotros/que-no-hace",
+        url: "/informacion/que-no-hace",
       },
       {
         name: "Objetivo del CPC",
-        url: "/nosotros/objetivo",
+        url: "/informacion/objetivo",
       },
       {
         name: "Cuales son sus Funciones",
-        url: "/nosotros/funciones",
+        url: "/informacion/funciones",
       },
     ],
   },
   {
-    name: "Misión y Visión",
+    name: "Nuestro Compromiso",
     url: "/mision-vision",
     submenu: [
       {
