--- a/src/components/common/information/EntryLayout.astro
+++ b/src/components/common/information/EntryLayout.astro
@@ -18,7 +18,7 @@ const { Content } = await render(entry);
   <section class="section-sm">
     <div class="container">
       <div class="row justify-center">
-        <div class="glass rounded-lg text-center p-8 md:col-10 lg:col-7 intersect:animate-fadeUp opacity-0 intersect-no-queue">
+        <div class="glass rounded-lg text- p-8 md:col-10 lg:col-7 intersect:animate-fadeUp opacity-0 intersect-no-queue">
             <h2 set:html={markdownify(title)} class="h3 mb-6" />
             <Content />
         </div>
