ultima modificacion ok

--- a/src/components/base/Footer.astro
+++ b/src/components/base/Footer.astro
@@ -27,18 +27,18 @@ import { IoLocationSharp, IoMailSharp, IoCallSharp } from "react-icons/io5";
             <IoLocationSharp
               className="mr-2 mt-1 h-5 w-5 flex-shrink-0 text-blue-600"
             />
-            <span>Calle Allende No. 23, Col. Centro, Tlaxcala, Tlax.</span>
+            <span>Reforma 103, Miraflores, 90114 Ocotlán, Tlax.</span>
           </li>
           <li class="flex items-center">
             <IoMailSharp className="mr-2 h-5 w-5 flex-shrink-0 text-blue-600" />
-            <a href="mailto:cpc.tlaxcala@gmail.com" class="hover:text-blue-600">
-              cpc.tlaxcala@gmail.com
+            <a href="mailto:contactocpctlaxcala@gmail.com" class="hover:text-blue-600">
+              contactocpctlaxcala@gmail.com
             </a>
           </li>
           <li class="flex items-center">
             <IoCallSharp className="mr-2 h-5 w-5 flex-shrink-0 text-blue-600" />
-            <a href="tel:+522464666632" class="hover:text-blue-600">
-              246 466 6632
+            <a href="tel:+522461892520" class="hover:text-blue-600">
+              246 189 25 20
             </a>
           </li>
         </ul>
@@ -51,7 +51,7 @@ import { IoLocationSharp, IoMailSharp, IoCallSharp } from "react-icons/io5";
         </h3>
         <ul class="space-y-2 text-sm text-gray-600 dark:text-gray-300">
           <li>
-            <a href="/nosotros/que-es-cpc" class="hover:text-blue-600"
+            <a href="/nosotros" class="hover:text-blue-600"
               >¿Qué es el CPC?</a
             >
           </li>
