--- a/src/components/base/Header.astro
+++ b/src/components/base/Header.astro
@@ -44,15 +44,15 @@ const menu = [
   },
   {
     name: "Nuestro Compromiso",
-    url: "/mision-vision",
+    url: "/nuestroCompromiso",
     submenu: [
       {
         name: "Misión",
-        url: "/mision-vision/mision",
+        url: "/nuestroCompromiso/mision",
       },
       {
         name: "Visión",
-        url: "/mision-vision/vision",
+        url: "/nuestroCompromiso/vision",
       },
     ],
   },
