--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,7 +26,7 @@ const teamMembers = [
     curriculumUrl: "/curriculum/juan-cruz",
   },
   {
-    name: "Victor Cosefl Flores",
+    name: "Lic. Víctor Cósetl Flores",
     position: "Integrante",
     imageUrl: "/src/assets/images/team/victor-flores.png",
     curriculumUrl: "/curriculum/victor-flores",
