--- a/src/pages/search.astro
+++ b/src/pages/search.astro
@@ -8,6 +8,8 @@ const searchableCollections = [
   "nosotros",
   "integrantes",
   "informacion",
+  "nuestroCompromiso",
+  "normatividad"
 ] as CollectionKey[];
 
 const searchList = (await getEntriesBatch(
