--- a/src/components/normatividad/EntryLayout.astro
+++ b/src/components/normatividad/EntryLayout.astro
@@ -20,7 +20,9 @@ const { Content } = await render(entry);
         <div class="row justify-center">
           <div class="glass rounded-lg text- p-8 md:col-10 lg:col-7 intersect:animate-fadeUp opacity-0 intersect-no-queue">
               <h2 set:html={markdownify(title)} class="h3 mb-6" />
-              <Content />
+              <div class="prose prose-blue max-w-none whitespace-pre-line">
+                <Content />
+              </div>
           </div>
         </div>
       </div>
