--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,36 +5,36 @@ import buzon from '../assets/images/hero_headers/buzon.png'
 import red from '../assets/images/hero_headers/red_ciudadana.png'
 import { Image } from 'astro:assets';
 
+// Import team member images
+import elizabethOlivares from '../assets/images/team/elizabeth-olivares.jpg';
+import carlosPerez from '../assets/images/team/carlos-perez.jpg';
+import juanCruz from '../assets/images/team/juan-cruz.jpg';
+import victorFlores from '../assets/images/team/victor-flores.png';
 
 const teamMembers = [
   {
     name: "Dra. Elizabeth Olivares Guevara",
     position: "Presidente",
-    imageUrl: "/src/assets/images/team/elizabeth-olivares.jpg",
+    imageUrl: elizabethOlivares,
     curriculumUrl: "/curriculum/elizabeth-olivares",
   },
   {
     name: "Lic. Carlos Jonathan Pérez Ramírez",
     position: "Integrante",
-    imageUrl: "/src/assets/images/team/carlos-perez.jpg",
+    imageUrl: carlosPerez,
     curriculumUrl: "/curriculum/carlos-perez",
   },
   {
     name: "Lic. Juan Carlos Cruz Jiménez",
     position: "Integrante",
-    imageUrl: "/src/assets/images/team/juan-cruz.jpg",
+    imageUrl: juanCruz,
     curriculumUrl: "/curriculum/juan-cruz",
   },
   {
     name: "Lic. Víctor Cósetl Flores",
     position: "Integrante",
-    imageUrl: "/src/assets/images/team/victor-flores.png",
+    imageUrl: victorFlores,
     curriculumUrl: "/curriculum/victor-flores",
-  },{
-    name: "Integrante",
-    position: "Integrante",
-    imageUrl: "/src/assets/images/team/",
-    curriculumUrl: "/curriculum/integrante",
   },
 ];
 ---
