--- a/src/pages/red-ciudadana/aviso_privacidad.astro
+++ b/src/pages/red-ciudadana/aviso_privacidad.astro
@@ -76,7 +76,7 @@
         </a>
         
        
-        <iframe title="PDF Document" class="convocatoria-pdf" src="/src/assets/images/utils/LINEAMIENTOS.pdf">
+        <iframe title="PDF Document" class="convocatoria-pdf" src="/docs/pdfs/LINEAMIENTOS.pdf">
 
         </iframe>
         <a href="/red-ciudadana" class="back-button">
