correccion en los estilos de markdown en el modo obscuro

--- a/src/components/common/information/EntryLayout.astro
+++ b/src/components/common/information/EntryLayout.astro
@@ -20,7 +20,7 @@ const { Content } = await render(entry);
       <div class="row justify-center">
         <div class="glass rounded-lg p-4 md:col-10 lg:col-7 intersect:animate-fadeUp opacity-0 intersect-no-queue">
             <h2 set:html={markdownify(title)} class="h3 mb-3" />
-            <div class="prose prose-blue max-w-none whitespace-pre-line">
+            <div class="prose dark:prose-invert max-w-none">
               <Content />
             </div>
         </div>
