--- a/src/components/base/Header.astro
+++ b/src/components/base/Header.astro
@@ -78,32 +78,32 @@ const menu = [
       },
     ],
   },
-  {
-    name: "Sesiones",
-    url: "/sesiones",
-    submenu: [
-      {
-        name: "Calendario",
-        url: "/sesiones/calendario",
-      },
-      {
-        name: "Sesiones en Vivo",
-        url: "/sesiones/en-vivo",
-      },
-      {
-        name: "Ordinaria",
-        url: "/sesiones/ordinaria",
-      },
-      {
-        name: "Extraordinaria",
-        url: "/sesiones/extraordinaria",
-      },
-    ],
-  },
-   {
-    name: "Línea de Tiempo",
-    url: "/linea-tiempo",
-   },
+  //{
+  //  name: "Sesiones",
+  //  url: "/sesiones",
+  //  submenu: [
+  //    {
+  //      name: "Calendario",
+  //      url: "/sesiones/calendario",
+  //    },
+  //    {
+  //      name: "Sesiones en Vivo",
+  //      url: "/sesiones/en-vivo",
+  //    },
+  //    {
+  //      name: "Ordinaria",
+  //      url: "/sesiones/ordinaria",
+  //    },
+  //    {
+  //      name: "Extraordinaria",
+  //      url: "/sesiones/extraordinaria",
+  //    },
+  //  ],
+  //},
+  // {
+  //  name: "Línea de Tiempo",
+  //  url: "/linea-tiempo",
+  // },
   // {
   //   name: "Contacto",
   //   url: "/contacto",
