--- a/src/components/common/Slider.astro
+++ b/src/components/common/Slider.astro
@@ -23,7 +23,7 @@ const { images }: Props = Astro.props;
 const slidesHtml = images && images.length > 0
   ? images.map((img, idx) => `
       <div class='hidden duration-700 ease-in-out' data-carousel-item>
-       <img src='${img.src}' alt='${img.alt}' class='absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2'/>     
+       <img src='${img.src}' alt='${img.alt}' class='absolute block w-md -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2'/>     
       </div>
     `).join('')
   : '';
