se solucina el error del slide

--- a/src/components/home/Actividades.astro
+++ b/src/components/home/Actividades.astro
@@ -5,12 +5,33 @@ const images:ImageItem[]=[{
     src:"/docs/images/acciones-relevantes/25_dias_naranja.png",
     alt:"25_dias_naranja.png"
 },{
-    src:"/docs/images/acciones-relevantes/25_dias_naranja.png",
-    alt:"25_dias_naranja.png"
+    src:"/docs/images/acciones-relevantes/convocatoria_nueva_ABC.png",
+    alt:"convocatoria_nueva_ABC.png"
+},{
+    src:"/docs/images/acciones-relevantes/Curso_Dibujo_infantil.png",
+    alt:"Curso_Dibujo_infantil.png"
+},{
+    src:"/docs/images/acciones-relevantes/Ganadores.png",
+    alt:"Ganadores.png"
+},{
+    src:"/docs/images/acciones-relevantes/intercambio.png",
+    alt:"intercambio.png"
+},{
+    src:"/docs/images/acciones-relevantes/mejora_regulatoria.png",
+    alt:"mejora_regulatoria.png"
+},{
+    src:"/docs/images/acciones-relevantes/Perspectiva_genero.png",
+    alt:"Perspectiva_genero.png"
+},{
+    src:"/docs/images/acciones-relevantes/semana_integridad.png",
+    alt:"semana_integridad.png"
+},{
+    src:"/docs/images/acciones-relevantes/transformacion.png",
+    alt:"transformacion.png"
+},{
+    src:"/docs/images/acciones-relevantes/valores_eticos.png",
+    alt:"valores_eticos.png"
 },]
-
-
-
 
 ---
 
@@ -18,16 +39,5 @@ const images:ImageItem[]=[{
 <Slider images={images}/>
 
 
-<script>
-	// Initialize Flowbite carousel
-	import { Carousel } from 'flowbite';
-	
-	// Initialize all carousels on the page
-	const carouselElement = document.getElementById('default-carousel');
-	
-	if (carouselElement) {
-		const carousel = new Carousel(carouselElement);
-	}
-</script>
 
 
