--- a/src/components/base/BaseLayout.astro
+++ b/src/components/base/BaseLayout.astro
@@ -128,11 +128,17 @@ const baseUrl = "https://cpc.saetlax.org/";
       integrity="sha384-hCXGrW6PitJEwbkoStFjeJxv+fSOOQKOPbJxSfM6G5sWZjAyWhXiTIIAmQqnlLlh"
       crossorigin="anonymous"
       onload="renderMathInElement(document.body);"></script>
-
-
     <!-- https://docs.astro.build/en/guides/view-transitions -->
     <ClientRouter fallback="swap" />
     <Tooltips interactive={false} delay={[333, 0]} />
+    <script>
+      import { initFlowbite } from "flowbite";
+      initFlowbite();
+      document.addEventListener('astro:after-swap', function () {
+        initFlowbite();
+      })
+    </script>
+    
   </head>
   <body>
     <Background />
