--- a/src/components/common/Slider.astro
+++ b/src/components/common/Slider.astro
@@ -23,12 +23,11 @@ const { images }: Props = Astro.props;
 const slidesHtml = images && images.length > 0
   ? images.map((img, idx) => `
       <div class='hidden duration-700 ease-in-out' data-carousel-item>
-       <img src='${img.src}' alt='${img.alt}' class='absolute block w-md -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2'/>     
+       <img src='${img.src}' alt='${img.alt}' class='absolute block -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2'/>     
       </div>
     `).join('')
   : '';
 
-  console.log(slidesHtml);
 
 // Generar HTML para indicadores
 const indicatorsHtml = images && images.length > 0
@@ -36,11 +35,10 @@ const indicatorsHtml = images && images.length > 0
       <button type='button' class='w-3 h-3 rounded-full' aria-current='${idx === 0 ? "true" : "false"}' aria-label='Slide ${idx + 1}' data-carousel-slide-to='${idx}'></button>
     `).join('')
   : '';
-  console.log(indicatorsHtml)
 ---
-<div id="default-carousel" class="relative w-full" data-carousel="slide">
+<div id="default-carousel" class="relative w-full py-5" data-carousel="slide">
     <!-- Carousel wrapper -->
-    <div class="relative h-56 overflow-hidden rounded-lg md:h-96" set:html={slidesHtml}></div>
+    <div class="relative h-56 overflow-hidden rounded-lg md:h-96 lg:h-[680px]" set:html={slidesHtml}></div>
     <!-- Slider indicators -->
     <div class="absolute z-30 flex -translate-x-1/2 bottom-5 left-1/2 space-x-3 rtl:space-x-reverse" set:html={indicatorsHtml}></div>
     <!-- Slider controls -->
