--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,7 +16,11 @@ import Actividades from "@components/home/Actividades.astro";
     <HomeTeam/>
   </section>
   <section class="container mx-auto px-4 py-16">
-    <Actividades/>
+    <div class="row justify-center">
+      <div class="glass rounded-lg text- p-8 md:col-10 lg:col-11 intersect:animate-fadeUp opacity-0 intersect-no-queue ">
+        <Actividades/>
+      </div>
+    </div>  
   </section>
 </BaseLayout>
 
