se agrega nuevo elemento de nuestro trabajo

--- a/src/components/base/Header.astro
+++ b/src/components/base/Header.astro
@@ -78,6 +78,10 @@ const menu = [
       },
     ],
   },
+  {
+    name:"Nuestro Trabajo",
+    url:"/nuestro-trabajo"
+  } 
   // {
   //  name: "Sesiones",
   //  url: "/sesiones",
