--- a/src/pages/search.astro
+++ b/src/pages/search.astro
@@ -9,7 +9,8 @@ const searchableCollections = [
   "integrantes",
   "informacion",
   "nuestroCompromiso",
-  "normatividad"
+  "normatividad",
+  "nuestro-trabajo"
 ] as CollectionKey[];
 
 const searchList = (await getEntriesBatch(
