--- a/src/components/common/Slider.astro
+++ b/src/components/common/Slider.astro
@@ -1,46 +1,50 @@
 ---
-/* import { Image } from "astro:assets";
- */
+import { Image } from "astro:assets";
+
 export interface ImageItem {
-  src: string; // Puede ser import de asset o string
+  src: ImageMetadata; // Changed to ImageMetadata for imported assets
   alt?: string;
 }
 
 interface Props {
   images: ImageItem[];
 }
-/* ${Image({
-          src: img.src,
-          alt: img.alt || `Slide ${idx + 1}`,
-          class: 'absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2',
-          width: 1200,
-          height: 500,
-          loading: 'lazy',
-        })} */
+
 const { images }: Props = Astro.props;
-
-// Generar HTML para slides
-const slidesHtml = images && images.length > 0
-  ? images.map((img, idx) => `
-      <div class='hidden duration-700 ease-in-out' data-carousel-item>
-       <img src='${img.src}' alt='${img.alt}' class='absolute block -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2'/>     
-      </div>
-    `).join('')
-  : '';
-
-
-// Generar HTML para indicadores
-const indicatorsHtml = images && images.length > 0
-  ? images.map((_, idx) => `
-      <button type='button' class='w-3 h-3 rounded-full' aria-current='${idx === 0 ? "true" : "false"}' aria-label='Slide ${idx + 1}' data-carousel-slide-to='${idx}'></button>
-    `).join('')
-  : '';
 ---
+
 <div id="default-carousel" class="relative w-full py-5" data-carousel="slide">
     <!-- Carousel wrapper -->
-    <div class="relative h-56 overflow-hidden rounded-lg md:h-96 lg:h-[680px]" set:html={slidesHtml}></div>
+    <div class="relative h-56 overflow-hidden rounded-lg md:h-96 lg:h-[680px]">
+      {images && images.length > 0 && images.map((img, idx) => (
+        <div class={`${idx === 0 ? '' : 'hidden'} duration-1000 ease-in-out`} data-carousel-item>
+          <div class="absolute block -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2">
+            <Image
+              src={img.src}
+              alt={img.alt || `Slide ${idx + 1}`}
+              class="w-full h-full object-cover"
+              width={1200}
+              height={500}
+              loading="lazy"
+            />
+          </div>
+        </div>
+      ))}
+    </div>
+    
     <!-- Slider indicators -->
-    <div class="absolute z-30 flex -translate-x-1/2 bottom-5 left-1/2 space-x-3 rtl:space-x-reverse" set:html={indicatorsHtml}></div>
+    <div class="absolute z-30 flex -translate-x-1/2 bottom-5 left-1/2 space-x-3 rtl:space-x-reverse">
+      {images && images.length > 0 && images.map((_, idx) => (
+        <button 
+          type="button" 
+          class="w-3 h-3 rounded-full" 
+          aria-current={idx === 0 ? "true" : "false"} 
+          aria-label={`Slide ${idx + 1}`} 
+          data-carousel-slide-to={idx}
+        ></button>
+      ))}
+    </div>
+    
     <!-- Slider controls -->
     <button type="button" class="absolute top-0 start-0 z-30 flex items-center justify-center h-full px-4 cursor-pointer group focus:outline-none" data-carousel-prev>
         <span class="inline-flex items-center justify-center w-10 h-10 rounded-full bg-gray-400/30 dark:bg-gray-800/30 group-hover:bg-white/50 dark:group-hover:bg-gray-800/60 group-focus:ring-4 group-focus:ring-white dark:group-focus:ring-gray-800/70 group-focus:outline-none">
